--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <title> JPI </title>
   </head>
-  <body>
-    <div id="header">
+  <body bgcolor='PaleGreen'>
+    <header id="header">
       <div class="logo-section">
-        <img src="logo.png" alt="LOGO" id="header-img" class="logo-sec">
+        <img src="logo.png" alt="LOGO" id="header-img" class="logo-sec" width="50px" height="50px">
       </div>
       <nav id="nav-bar" class="navigation-bar">
         <ul style="list-style-type: none;" class="navigation">
@@ -19,6 +19,23 @@
           <li> <a href="#" class="nav-link"> Contact Us </a></li>
         </ul>
       </nav>
-    </div>
+    </header>
+
+    <main>
+      <div class="container">
+        <section id="JPI" class="cover-section">
+          <div class="title-text">
+            <br><br><br>
+            <h1>Jeons And Parks Interiors </h1>
+            <p align='center'>  &prap; &precapprox; We innovate your house &bumpE; with your desires... &scap; &succapprox; </p>
+          </div>
+          <div class="box-feature">
+            <img src="2.jpg" alt="" class="cover-image">
+          </div>
+        </section>
+      </div>
+    </main>
+
+
   </body>
 </html>
