--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <title> JPI </title>
   </head>
-  <body bgcolor='PaleGreen'>
+  <body bgcolor='Lavender'>
     <header id="header">
       <div class="logo-section">
-        <img src="logo.png" alt="LOGO" id="header-img" class="logo-sec" width="50px" height="50px">
+        <img src="Logo.png" alt="LOGO" id="header-img" class="logo-sec" width="50px" height="50px">
       </div>
       <nav id="nav-bar" class="navigation-bar">
         <ul style="list-style-type: none;" class="navigation">
-          <li> <a href="#" class="nav-link"> JPI </a></li>
+          <li> <a href="#" class="nav-link"> Home </a></li>
           <li> <a href="#" class="nav-link"> Our Story </a></li>
-          <li> <a href="#" class="nav-link"> Work Log </a></li>
+          <li> <a href="#" class="nav-link"> Featured </a></li>
           <li> <a href="#" class="nav-link"> Contact Us </a></li>
         </ul>
       </nav>
@@ -23,16 +23,24 @@
 
     <main>
       <div class="container">
+
+          <!--Main Section-->
+
         <section id="JPI" class="cover-section">
           <div class="title-text">
             <br><br><br>
-            <h1>Jeons And Parks Interiors </h1>
-            <p align='center'>  &prap; &precapprox; We innovate your house &bumpE; with your desires... &scap; &succapprox; </p>
+            <h1>Jeons <br> & <br> Parks Interiors </h1>
+            <p align='center' style="Font-family: Georgia"> We innovate the houses <br> &glj; <br> The way you desire homes </p>
           </div>
           <div class="box-feature">
-            <img src="2.jpg" alt="" class="cover-image">
+            <img src="2.jpg" alt="" class="cover-image" width="700px" height="450px">
           </div>
         </section>
+
+          <!-- Story section-->
+
+
+
       </div>
     </main>
 
