--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p align='center' style="Font-family: Georgia"> We innovate the houses <br> &glj; <br> The way you desire homes </p>
           </div>
           <div class="box-feature">
-            <img src="2.jpg" alt="" class="cover-image" width="700px" height="450px">
+            <img src="Logo.png" alt="" class="cover-image" width="600px" height="600px">
           </div>
         </section>
 
