--- a/index.html
+++ b/index.html
@@ -32,18 +32,98 @@
             <h1>Jeons <br> & <br> Parks Interiors </h1>
             <p align='center' style="Font-family: Georgia"> We innovate the houses <br> &glj; <br> The way you desire homes </p>
           </div>
-          <div class="box-feature">
-            <img src="Logo.png" alt="" class="cover-image" width="500px" height="500px">
+          <div class="box-feature" align='center'>
+            <br><br><br><br><br> <img src="Logo.png" alt="" class="cover-image" width="400px" height="400px">
           </div>
         </section>
 
           <!-- Story section-->
 
 
+          <section>
+            <div class="container-fluid">
+              <img src="9.jpg" alt="" width="900px" height="500px">
+              <div class="text-block">
+                  <h2> Our Story </h2>
+                  <p> Furnishing your home can be overwhelming at times, at least that's how it was for us. </p>
+                  <p> JPI was born to help others going through the maze of interior designing. If you're on the hunt for high-end Interiors,
+                      JPI is your aid. We design curated residential spaces that are a beautiful reflection of what’s most important to you.
+                      We believe in focusing on elegant and higher-end design projects. You'll find trend insights, design tips, and more,
+                      all straight from JPI's team of professional interior designers. </p>
+              </div>
+            </div>
+          </section>
 
+          <!--Featured Section-->
+          <section id="designs" class="sample">
+            <div class="section-text">
+              <h2> F  e  a  t  u  r  e  d </h2>
+              <p> Give a glance to some of our featured picks that have made editorial debuts.</p>
+            </div>
+            <div class="featured">
+              <div class="work">
+                <img src="13.jpeg" alt="" >
+                <figcaption> <a href="#"> Living Room </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="34.jpg" alt="" >
+                <figcaption> <a href="#"> Bedroom </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="18.jpeg" alt="" >
+                <figcaption> <a href="#"> Kichenette </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="16.jpeg" alt="" >
+                <figcaption> <a href="#"> Dinette </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="20.jpeg" alt="" >
+                <figcaption> <a href="#"> Family Room </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="29.jpg" alt="" >
+                <figcaption> <a href="#"> Guest Room </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="17.jpeg" alt="" >
+                <figcaption> <a href="#"> Bathroom </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="21.jpeg" alt="" >
+                <figcaption> <a href="#"> Game Room </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="22.jpg" alt="" >
+                <figcaption> <a href="#"> Home-Office </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="23.jpeg" alt="" >
+                <figcaption> <a href="#"> Nursery </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="26.jpeg" alt="" >
+                <figcaption> <a href="#"> Playroom </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="25.jpeg" alt="" >
+                <figcaption> <a href="#"> Home-Library </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="24.jpeg" alt="" >
+                <figcaption> <a href="#"> Gym-room </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="27.jpeg" alt="" >
+                <figcaption> <a href="#"> Study Room </a> </figcaption>
+              </div>
+              <div class="work">
+                <img src="28.jpeg" alt="" width="300px" height="450px">
+                <figcaption> <a href="#"> Balcony </a> </figcaption>
+              </div>
+            </div>
+          </section> -->
       </div>
     </main>
-
-
   </body>
 </html>
