--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
 
     <main>
+      <div class="progress-bar">  </div>
       <div class="container">
 
           <!--Main Section-->
