--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title> JPI </title>
   </head>
-  <body bgcolor='Lavender'>
+  <body bgcolor='Lavender' style="width: 100%;">
     <header id="header">
       <div class="logo-section">
         <img src="Logo.png" alt="LOGO" id="header-img" class="logo-sec" width="50px" height="50px">
@@ -41,19 +41,19 @@
           <!-- Story section-->
 
 
-          <section>
-            <div class="container-fluid">
-              <img src="9.jpg" alt="" width="900px" height="500px">
-              <div class="text-block">
-                  <h2> Our Story </h2>
-                  <p> Furnishing your home can be overwhelming at times, at least that's how it was for us. </p>
-                  <p> JPI was born to help others going through the maze of interior designing. If you're on the hunt for high-end Interiors,
+      <section>
+        <div class="container-fluid" style="background: Teal; padding: 50px  ; ">
+            <div style="float: left; width: 65%; height: auto;">  <img src="9.jpg" alt="" width="100%" height="450px" > </div>
+            <div class="text-block" style="background: whitesmoke; float:left;">
+              <h2> Our Story </h2>
+                <p> Furnishing your home can be overwhelming at times, at least that's how it was for us. </p>
+                <p> JPI was born to help others going through the maze of interior designing. If you're on the hunt for high-end Interiors,
                       JPI is your aid. We design curated residential spaces that are a beautiful reflection of what’s most important to you.
                       We believe in focusing on elegant and higher-end design projects. You'll find trend insights, design tips, and more,
                       all straight from JPI's team of professional interior designers. </p>
-              </div>
             </div>
-          </section>
+        </div>
+      </section>
 
           <!--Featured Section-->
           <section id="designs" class="sample">
