--- a/index.html
+++ b/index.html
@@ -7,25 +7,29 @@
     <title> JPI </title>
   </head>
   <body bgcolor='Lavender' style="width: 100%;">
+
+
+
+          <!--Menu-->
+
     <header id="header">
       <div class="logo-section">
         <img src="Logo.png" alt="LOGO" id="header-img" class="logo-sec" width="50px" height="50px">
       </div>
       <nav id="nav-bar" class="navigation-bar">
         <ul style="list-style-type: none;" class="navigation">
-          <li> <a href="#" class="nav-link"> Home </a></li>
-          <li> <a href="#" class="nav-link"> Our Story </a></li>
-          <li> <a href="#" class="nav-link"> Featured </a></li>
-          <li> <a href="#" class="nav-link"> Contact Us </a></li>
+          <li> <a href="index.html#JPI" class="nav-link"> Home </a></li>
+          <li> <a href="index.html#About" class="nav-link"> Our Story </a></li>
+          <li> <a href="index.html#Designs" class="nav-link"> Featured </a></li>
+          <li> <a href="index.html#Contact" class="nav-link"> Contact Us </a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <div class="progress-bar">  </div>
-      <div class="container">
 
-          <!--Main Section-->
+
+           <!--Main Section-->
 
         <section id="JPI" class="cover-section">
           <div class="title-text">
@@ -38,93 +42,121 @@
           </div>
         </section>
 
+
+
           <!-- Story section-->
 
-
-      <section>
-        <div class="container-fluid" style="background: Teal; padding: 50px  ; ">
-            <div style="float: left; width: 65%; height: auto;">  <img src="9.jpg" alt="" width="100%" height="450px" > </div>
-            <div class="text-block" style="background: whitesmoke; float:left;">
-              <h2> Our Story </h2>
-                <p> Furnishing your home can be overwhelming at times, at least that's how it was for us. </p>
-                <p> JPI was born to help others going through the maze of interior designing. If you're on the hunt for high-end Interiors,
+              <section id="About">
+                <div  class="container-fluid" style="background: Teal; padding: 50px  ; ">
+                  <div style="float: left; width: 65%; height: auto;">  <img src="9.jpg" alt="" width="100%" height="450px" > </div>
+                  <div class="text-block" style="background: whitesmoke; float:left;">
+                    <h2>  Our Story </h2>
+                    <p> Furnishing your home can be overwhelming at times, at least that's how it was for us. </p>
+                    <p> JPI was born to help others going through the maze of interior designing. If you're on the hunt for high-end Interiors,
                       JPI is your aid. We design curated residential spaces that are a beautiful reflection of what’s most important to you.
                       We believe in focusing on elegant and higher-end design projects. You'll find trend insights, design tips, and more,
                       all straight from JPI's team of professional interior designers. </p>
-            </div>
-        </div>
-      </section>
+                  </div>
+                </div>
+              </section>
+
+
 
           <!--Featured Section-->
-          <section id="designs" class="sample">
-            <div class="section-text">
-              <h2> F  e  a  t  u  r  e  d </h2>
-              <p> Give a glance to some of our featured picks that have made editorial debuts.</p>
-            </div>
-            <div class="featured"> 
-              <div class="work">
-                <img src="13.jpeg" alt="" >
-                <figcaption> <a href="#"> Living Room </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="34.jpg" alt="" >
-                <figcaption> <a href="#"> Bedroom </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="18.jpeg" alt="" >
-                <figcaption> <a href="#"> Kichenette </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="16.jpeg" alt="" >
-                <figcaption> <a href="#"> Dinette </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="20.jpeg" alt="" >
-                <figcaption> <a href="#"> Family Room </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="29.jpg" alt="" >
-                <figcaption> <a href="#"> Guest Room </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="17.jpeg" alt="" >
-                <figcaption> <a href="#"> Bathroom </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="21.jpeg" alt="" >
-                <figcaption> <a href="#"> Game Room </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="22.jpg" alt="" >
-                <figcaption> <a href="#"> Home-Office </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="23.jpeg" alt="" >
-                <figcaption> <a href="#"> Nursery </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="26.jpeg" alt="" >
-                <figcaption> <a href="#"> Playroom </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="25.jpeg" alt="" >
-                <figcaption> <a href="#"> Home-Library </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="24.jpeg" alt="" >
-                <figcaption> <a href="#"> Gym-room </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="27.jpeg" alt="" >
-                <figcaption> <a href="#"> Study Room </a> </figcaption>
-              </div>
-              <div class="work">
-                <img src="28.jpeg" alt="" width="300px" height="450px">
-                <figcaption> <a href="#"> Balcony </a> </figcaption>
-              </div>
-            </div>
-          </section> -->
-      </div>
+
+              <section id="Designs" class="sample">
+                <div class="section-text">
+                  <h2> F  e  a  t  u  r  e  d </h2>
+                  <p> Give a glance to some of our featured picks that have made editorial debuts.</p>
+                </div>
+                <div class="featured">
+                  <div class="work">
+                    <img src="13.jpeg" alt="" >
+                    <figcaption> <a href="#"> Living Room </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="34.jpg" alt="" >
+                    <figcaption> <a href="#"> Bedroom </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="18.jpeg" alt="" >
+                    <figcaption> <a href="#"> Kichenette </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="16.jpeg" alt="" >
+                    <figcaption> <a href="#"> Dinette </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="20.jpeg" alt="" >
+                    <figcaption> <a href="#"> Family Room </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="29.jpg" alt="" >
+                    <figcaption> <a href="#"> Guest Room </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="17.jpeg" alt="" >
+                    <figcaption> <a href="#"> Bathroom </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="21.jpeg" alt="" >
+                    <figcaption> <a href="#"> Game Room </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="22.jpg" alt="" >
+                    <figcaption> <a href="#"> Home-Office </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="23.jpeg" alt="" >
+                    <figcaption> <a href="#"> Nursery </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="26.jpeg" alt="" >
+                    <figcaption> <a href="#"> Playroom </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="25.jpeg" alt="" >
+                    <figcaption> <a href="#"> Home-Library </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="24.jpeg" alt="" >
+                    <figcaption> <a href="#"> Gym-room </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="27.jpeg" alt="" >
+                    <figcaption> <a href="#"> Study Room </a> </figcaption>
+                  </div>
+                  <div class="work">
+                    <img src="28.jpeg" alt="" width="300px" height="450px">
+                    <figcaption> <a href="#"> Balcony </a> </figcaption>
+                  </div>
+                </div>
+              </section>
+
+
+
+              <!-- Contact Section-->
+              <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+              <section id="Contact" class="contact-section">
+                <div class="section-text" >
+                  <h2> Reach out to us for more information. </h2>
+                  <p> We would love to hear from you! <br> To get our monthly updated catalogue, subscribe with the help of the following form. </p>
+                </div>
+                <div class="contact-information">
+                  <form id="form" class="contact-form" >
+                      <label for="name" class="form-entry"> Name <br>
+                        <input type="text" name="Name" id="Name" type="text" class="txt-box" placeholder="&nbsp; &nbsp; Kim Hana" required> <br>
+                      </label>
+                      <label for="email" class="form-entry"> E-mail <br>
+                        <input name="email" id="email" type="email" class="txt-box" placeholder="&nbsp; &nbsp; example@gmail.com" required> <br>
+                      </label>
+                      <label for="message" class="form-entry"> Message <br>
+                        <textarea type="textarea" id="message" name="message" class="txt-box" placeholder="&nbsp; &nbsp; Type your message here..."> </textarea>
+                      </label>
+                      <input type="submit" id="submit" value="SUBMIT" class="btn">
+                  </form>
+                </div>
+              </section>
     </main>
   </body>
 </html>
