progress bar added

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title> JPI </title>
   </head>
   <body bgcolor='Lavender' style="width: 100%;">
-
-
-
+    <div class="progress-bar"></div>
           <!--Menu-->
 
     <header id="header">
@@ -158,5 +156,21 @@
                 </div>
               </section>
     </main>
+
+    <script src="nanobar.js"></script>
+    <script>
+      var nanobar = new Nanobar();
+      var element = document.documentElement,
+        body = document.body,
+        scrollTop = 'scrollTop',
+        scrollHeight = 'scrollHeight',
+        progress = document.querySelector('.progress-bar'),
+        scroll;
+
+      document.addEventListener('scroll', function() {
+        scroll = (element[scrollTop]||body[scrollTop]) / ((element[scrollHeight]||body[scrollHeight]) - element.clientHeight) * 100;
+        progress.style.setProperty('--scroll', scroll + '%');
+      });
+    </script>
   </body>
 </html>
