--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       </div>
       <nav id="nav-bar" class="navigation-bar">
         <ul style="list-style-type: none;" class="navigation">
-          <li> <a href="index.html#JPI" class="nav-link"> Home </a></li>
-          <li> <a href="index.html#About" class="nav-link"> Our Story </a></li>
-          <li> <a href="index.html#Designs" class="nav-link"> Featured </a></li>
-          <li> <a href="index.html#Contact" class="nav-link"> Contact Us </a></li>
+          <li> <a href="#JPI" class="nav-link"> Home </a></li>
+          <li> <a href="#About" class="nav-link"> Our Story </a></li>
+          <li> <a href="#Designs" class="nav-link"> Featured </a></li>
+          <li> <a href="#Contact" class="nav-link"> Contact Us </a></li>
         </ul>
       </nav>
     </header>
@@ -33,7 +33,7 @@
           <div class="title-text">
             <br><br><br>
             <h1>Jeons <br> & <br> Parks Interiors </h1>
-            <p align='center' style="Font-family: Georgia"> We innovate the houses <br> &glj; <br> The way you desire homes </p>
+            <p align='center'> We innovate the houses <br> &glj; <br> The way you desire homes </p>
           </div>
           <div class="box-feature" align='center'>
             <br><br><br><br><br> <img src="Logo.png" alt="" class="cover-image" width="400px" height="400px">
@@ -138,7 +138,10 @@
               <section id="Contact" class="contact-section">
                 <div class="section-text" >
                   <h2> Reach out to us for more information. </h2>
-                  <p> We would love to hear from you! <br> To get our monthly updated catalogue, subscribe with the help of the following form. </p>
+                    <br> <br>
+                  <p> We would love to hear from you!
+                    <br> <br> <br>
+                    To get our monthly updated catalogue, subscribe with the help of the following form. </p>
                 </div>
                 <div class="contact-information">
                   <form id="form" class="contact-form" >
@@ -149,7 +152,7 @@
                         <input name="email" id="email" type="email" class="txt-box" placeholder="&nbsp; &nbsp; example@gmail.com" required> <br>
                       </label>
                       <label for="message" class="form-entry"> Message <br>
-                        <textarea type="textarea" id="message" name="message" class="txt-box" placeholder="&nbsp; &nbsp; Type your message here..."> </textarea>
+                        <textarea type="textarea" id="message" name="message" class="txt-box"> </textarea>
                       </label>
                       <input type="submit" id="submit" value="SUBMIT" class="btn">
                   </form>
