--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           <!--Featured Section-->
 
               <section id="Designs" class="sample">
-                <div class="section-text">
+                <div class="section-featured">
                   <h2> F  e  a  t  u  r  e  d </h2>
-                  <p> Give a glance to some of our featured picks that have made editorial debuts.</p>
+                  <p style="font-family: Garamond, serif;"> <b>  Give a glance to some of our <br> featured picks <br> that have made editorial debuts. </b> </p>
                 </div>
                 <div class="featured">
                   <div class="work">
@@ -134,33 +134,30 @@
 
 
               <!-- Contact Section-->
-              <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
               <section id="Contact" class="contact-section">
-                <div class="section-text" >
+                <div class="section-text">
                   <h2> Reach out to us for more information. </h2>
-                    <br> <br>
-                  <p> We would love to hear from you!
-                    <br> <br> <br>
-                    To get our monthly updated catalogue, subscribe with the help of the following form. </p>
+                  <h1> BOOK <br> AN <br> APPOINTMENT <br> TODAY! </h1>
+                  <p> We would love to hear from you! </p>
                 </div>
-                <div class="contact-information">
-                  <form id="form" class="contact-form" >
-                      <label for="name" class="form-entry"> Name <br>
-                        <input type="text" name="Name" id="Name" type="text" class="txt-box" placeholder="&nbsp; &nbsp; Kim Hana" required> <br>
+                <div class="appointment-flex-item">
+                  <form id="form" class="appointment-form" action="connect.php" method="post">
+                      <label for="Name" class="form-entry"> Name <br>
+                        <input type="text" name="Name" id="Name" class="txt-box" placeholder="&nbsp; &nbsp; Kim Hana" required> <br>
+                      </label>
+                      <label for="contact" class="form-entry"> Contact No. <br>
+                        <input type="text" name="Contact" id="contact" class="txt-box" placeholder="&nbsp; &nbsp; 0810-20-391" required> <br>
                       </label>
                       <label for="email" class="form-entry"> E-mail <br>
-                        <input name="email" id="email" type="email" class="txt-box" placeholder="&nbsp; &nbsp; example@gmail.com" required> <br>
+                        <input type="text" name="Email" id="email" class="txt-box" placeholder="&nbsp; &nbsp; example@gmail.com" required> <br>
                       </label>
-                      <label for="message" class="form-entry"> Message <br>
-                        <textarea type="textarea" id="message" name="message" class="txt-box"> </textarea>
+                      <label for="city" class="form-entry"> City <br>
+                        <input type="text" name="City" id="city" class="txt-box" placeholder="&nbsp; &nbsp; Seoul" required> <br> <br>
                       </label>
-                      <input type="submit" id="submit" value="SUBMIT" class="btn">
+                      <input type="submit" id="submit" value="Make Appointment!" class="btn">
                   </form>
                 </div>
               </section>
-    </main>
-
-
 
     <!--Progress Bar -->
 
