--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title> JPI </title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body bgcolor='Lavender' style="width: 100%;">
     <div class="progress-bar"></div>
@@ -24,15 +25,13 @@
       </nav>
     </header>
 
-    <main>
-
 
            <!--Main Section-->
 
         <section id="JPI" class="cover-section">
           <div class="title-text">
             <br><br><br>
-            <h1>Jeons <br> & <br> Parks Interiors </h1>
+            <h1>Jeons <br> & <br> Parks Interiorz </h1>
             <p align='center'> We innovate the houses <br> &glj; <br> The way you desire homes </p>
           </div>
           <div class="box-feature" align='center'>
@@ -65,72 +64,102 @@
               <section id="Designs" class="sample">
                 <div class="section-featured">
                   <h2> F  e  a  t  u  r  e  d </h2>
-                  <p style="font-family: Garamond, serif;"> <b>  Give a glance to some of our <br> featured picks <br> that have made editorial debuts. </b> </p>
+                  <p style="font-family: Garamond, serif;"> <b>
+                    Give a glance to some of our <br> featured picks <br> that have made editorial debuts. </b> </p>
                 </div>
                 <div class="featured">
                   <div class="work">
+                    <a href="LivingRoom.html" target="_blank">
                     <img src="13.jpeg" alt="" >
-                    <figcaption> <a href="#"> Living Room </a> </figcaption>
+                    <figcaption> Living Room </figcaption>
+                    </a>
                   </div>
                   <div class="work">
+                    <a href="Bedroom.html" target="_blank">
                     <img src="34.jpg" alt="" >
                     <figcaption> <a href="#"> Bedroom </a> </figcaption>
+                    </a>
                   </div>
                   <div class="work">
+                    <a href="Kitchenette.html" target="_blank">
                     <img src="18.jpeg" alt="" >
                     <figcaption> <a href="#"> Kichenette </a> </figcaption>
+                    </a>
                   </div>
                   <div class="work">
-                    <img src="16.jpeg" alt="" >
-                    <figcaption> <a href="#"> Dinette </a> </figcaption>
-                  </div>
-                  <div class="work">
-                    <img src="20.jpeg" alt="" >
-                    <figcaption> <a href="#"> Family Room </a> </figcaption>
-                  </div>
-                  <div class="work">
-                    <img src="29.jpg" alt="" >
-                    <figcaption> <a href="#"> Guest Room </a> </figcaption>
-                  </div>
-                  <div class="work">
+                    <a href="Bathroom.html" target="_blank">
                     <img src="17.jpeg" alt="" >
                     <figcaption> <a href="#"> Bathroom </a> </figcaption>
                   </div>
+                    </a>
                   <div class="work">
+                    <a href="GameRoom.html" target="_blank">
                     <img src="21.jpeg" alt="" >
                     <figcaption> <a href="#"> Game Room </a> </figcaption>
+                    </a>
                   </div>
                   <div class="work">
-                    <img src="22.jpg" alt="" >
-                    <figcaption> <a href="#"> Home-Office </a> </figcaption>
-                  </div>
-                  <div class="work">
-                    <img src="23.jpeg" alt="" >
-                    <figcaption> <a href="#"> Nursery </a> </figcaption>
-                  </div>
-                  <div class="work">
-                    <img src="26.jpeg" alt="" >
-                    <figcaption> <a href="#"> Playroom </a> </figcaption>
-                  </div>
-                  <div class="work">
-                    <img src="25.jpeg" alt="" >
-                    <figcaption> <a href="#"> Home-Library </a> </figcaption>
-                  </div>
-                  <div class="work">
-                    <img src="24.jpeg" alt="" >
-                    <figcaption> <a href="#"> Gym-room </a> </figcaption>
-                  </div>
-                  <div class="work">
+                    <a href="StudyRoom.html" target="_blank">
                     <img src="27.jpeg" alt="" >
                     <figcaption> <a href="#"> Study Room </a> </figcaption>
+                    </a>
                   </div>
                   <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="16.jpeg" alt="" >
+                    <figcaption> <a href="#"> Dinette </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="20.jpeg" alt="" >
+                    <figcaption> <a href="#"> Family Room </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="22.jpg" alt="" >
+                    <figcaption> <a href="#"> Home-Office </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="23.jpeg" alt="" >
+                    <figcaption> <a href="#"> Nursery </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="26.jpeg" alt="" >
+                    <figcaption> <a href="#"> Playroom </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="25.jpeg" alt="" >
+                    <figcaption> <a href="#"> Home-Library </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="24.jpeg" alt="" >
+                    <figcaption> <a href="#"> Gym-room </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
+                    <img src="29.jpg" alt="" >
+                    <figcaption> <a href="#"> Guest Room </a> </figcaption>
+                    </a>
+                  </div>
+                  <div class="work">
+                    <a href="Appointment.html" target="_blank">
                     <img src="28.jpeg" alt="" width="300px" height="450px">
                     <figcaption> <a href="#"> Balcony </a> </figcaption>
+                    </a>
                   </div>
                 </div>
               </section>
-
 
 
               <!-- Contact Section-->
@@ -149,7 +178,7 @@
                         <input type="text" name="Contact" id="contact" class="txt-box" placeholder="&nbsp; &nbsp; 0810-20-391" required> <br>
                       </label>
                       <label for="email" class="form-entry"> E-mail <br>
-                        <input type="text" name="Email" id="email" class="txt-box" placeholder="&nbsp; &nbsp; example@gmail.com" required> <br>
+                        <input type="text" name="Email" id="email" class="txt-box" placeholder="&nbsp; &nbsp; example@mail.com" required> <br>
                       </label>
                       <label for="city" class="form-entry"> City <br>
                         <input type="text" name="City" id="city" class="txt-box" placeholder="&nbsp; &nbsp; Seoul" required> <br> <br>
@@ -175,7 +204,6 @@
           progress.style.setProperty('--scroll', scroll + '%');
         });
       </script>
-
 
 
     <!-- Footer Section -->
