--- a/Bedroom.html
+++ b/Bedroom.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="interior.css">
+    <link rel="stylesheet" href="Interior.css">
     <title> Bedrooms </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
 
         <!--Progress Bar -->
-        
+
           <div class="progress-bar"></div>
           <script src="nanobar.js"></script>
           <script>
