--- a/GameRoom.html
+++ b/GameRoom.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="interior.css">
+    <link rel="stylesheet" href="Interior.css">
     <title> Game Rooms </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
